--- a/briar-android/src/main/res/values-ru/strings.xml
+++ b/briar-android/src/main/res/values-ru/strings.xml
@@ -20,8 +20,7 @@
   <string name="startup_failed_notification_title">Не удалось запустить Briar</string>
   <string name="startup_failed_notification_text">Возможно, потребуется переустановить Briar.</string>
   <string name="startup_failed_activity_title">Сбой при запуске Briar</string>
-  <string name="startup_failed_db_error">По какой-то причине, ваша база данных Briar повреждена без возможности восстановления. Ваша учетная запись, ваши данные и все ваши связи с контактами потеряны.
-К сожалению, необходимо переустановить Briar и настроить новую учетную запись.</string>
+  <string name="startup_failed_db_error">По какой-то причине, ваша база данных Briar повреждена без возможности восстановления. Ваша учетная запись, ваши данные и все ваши связи с контактами потеряны. К сожалению, необходимо переустановить Briar и настроить новую учетную запись.</string>
   <string name="startup_failed_service_error">Briar не смог запустить требуемый подключаемый модуль. Переустановка Briar обычно решает эту проблему. Однако обратите внимание, что после этого вы потеряете свою учетную запись и все связанные с ней данные, поскольку Briar не использует центральных серверов для хранения данных.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Это бета-версия Briar. Срок действия вашей учетной записи истекает через %d день и не может быть продлен.</item>
@@ -153,7 +152,7 @@
     <item quantity="other">%d новых контактов добавлено.</item>
   </plurals>
   <!--Private Groups-->
-  <string name="groups_list_empty">Вы не состоите в каких-либо группах.\n\nКоснитесь значка + вверху, чтобы создать группу самостоятельно или попросить ваши контакты пригласить их в одну из своих групп.</string>
+  <string name="groups_list_empty">Вы не состоите в каких-либо группах.\n\nКоснитесь значка + вверху, чтобы создать группу самостоятельно или попросить ваши контакты пригласить вас в одну из своих групп.</string>
   <string name="groups_created_by">Создано %s</string>
   <plurals name="messages">
     <item quantity="one">%d сообщение</item>
@@ -201,10 +200,10 @@
   <string name="groups_invitations_response_declined_sent">Вы отклонили приглашение в группу от %s.</string>
   <string name="groups_invitations_response_accepted_received">%s принял приглашение в группу.</string>
   <string name="groups_invitations_response_declined_received">%s отклонил приглашение в группу.</string>
-  <string name="sharing_status_groups">Только создатель может пригласить новых членов в группу. Ниже перечислены все текущие члены группы.</string>
+  <string name="sharing_status_groups">Только создатель может пригласить новых пользователей в группу. Ниже перечислены все текущие пользователи группы.</string>
   <!--Private Groups Revealing Contacts-->
   <string name="groups_reveal_contacts">Показать контакты</string>
-  <string name="groups_reveal_dialog_message">Вы можете выбрать, раскрывать ли контакты всем текущим и будущим членам этой группы.\n\nПри раскрытии контактов связь с группой становится более быстрой и надежной, поскольку вы можете общаться с раскрытыми контактами, даже если создатель группы находится в автономном режиме.</string>
+  <string name="groups_reveal_dialog_message">Вы можете выбрать, раскрывать ли контакты текущим и будущим участникам этой группы.\n\nПри раскрытии контактов связь с группой становится более быстрой и надежной, поскольку вы можете общаться с раскрытыми контактами, даже если создатель группы находится в автономном режиме.</string>
   <string name="groups_reveal_visible">Связь между контактами видна группе</string>
   <string name="groups_reveal_visible_revealed_by_us">Связь между контактами видна группе (раскрывается вами)</string>
   <string name="groups_reveal_visible_revealed_by_contact">Связь между контактами видна группе (раскрывается %s)</string>
@@ -229,7 +228,7 @@
   <string name="btn_reply">Ответ</string>
   <string name="forum_leave">Покинуть форум</string>
   <string name="dialog_title_leave_forum">Подтвердить</string>
-  <string name="dialog_message_leave_forum">Вы уверены, что хотите покинуть этот форум? Контакты, с которыми вы поделились этим форумом, могут быть перестать получать обновления этого форума.</string>
+  <string name="dialog_message_leave_forum">Вы уверены, что хотите покинуть этот форум? Контакты, с которыми вы поделились этим форумом, могут перестать получать обновления этого форума.</string>
   <string name="dialog_button_leave">Покинуть</string>
   <string name="forum_left_toast">Покинул форум</string>
   <!--Forum Sharing-->
@@ -253,7 +252,7 @@
   <string name="forum_invitation_response_accepted_received">%sпринял приглашение на форум.</string>
   <string name="forum_invitation_response_declined_received">%s отклонил приглашение на форум.</string>
   <string name="sharing_status">Статус общего доступа</string>
-  <string name="sharing_status_forum">Любой член форума может поделиться своими контактами. Вы делитесь этим форумом со следующими контактами. Могут быть и другие члены, которых вы не видите.</string>
+  <string name="sharing_status_forum">Любой участник форума может поделиться своими контактами. Вы делитесь этим форумом со следующими контактами. Могут быть и другие участники, которых вы не видите.</string>
   <string name="shared_with">Совместно с %1$d (%2$d в сети)</string>
   <plurals name="forums_shared">
     <item quantity="one">%d форум, общий с контактами</item>
@@ -261,7 +260,7 @@
     <item quantity="many">%d форумов, общих с контактами</item>
     <item quantity="other">%d форумов, общих с контактами</item>
   </plurals>
-  <string name="nobody">Никто</string>
+  <string name="nobody">Никого</string>
   <!--Blogs-->
   <string name="blogs_other_blog_empty_state">Этот блог пуст.\n\nЛибо автор еще ничего не написал, либо человек, который поделился с вами этим блогом, должен выйти в Интернет, чтобы сообщения могли быть синхронизированы.</string>
   <string name="read_more">подробнее</string>
@@ -292,7 +291,7 @@
   <string name="blogs_sharing_invitations_title">Приглашения в блог</string>
   <string name="blogs_sharing_joined_toast">Подписался на блог</string>
   <string name="blogs_sharing_declined_toast">Приглашение в блог отклонено</string>
-  <string name="sharing_status_blog">Любой, кто подписывается на блог, может поделиться им со своими контактами. Вы делитесь этим блогом со следующими контактами. Могут также быть и другие подписчики, которых вы не видите.</string>
+  <string name="sharing_status_blog">Любой, кто подписывается на блог, может поделиться им со своими контактами. Вы делитесь этим блогом со следующими контактами. Также могут быть и другие подписчики, которых вы не видите.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Импорт RSS-канала</string>
   <string name="blogs_rss_feeds_import_button">Импорт</string>
@@ -324,21 +323,21 @@
   <string name="choose_new_password">Выберите новый пароль:</string>
   <string name="confirm_new_password">Подтвердите новый пароль:</string>
   <string name="password_changed">Пароль был изменен.</string>
-  <string name="panic_setting">Настройка кнопки паники</string>
-  <string name="panic_setting_title">Кнопка паники</string>
-  <string name="panic_setting_hint">Настройте поведение Briar, когда вы используете приложение Кнопка паники</string>
-  <string name="panic_app_setting_title">Приложение Кнопка паники</string>
+  <string name="panic_setting">Настройка тревожной кнопки</string>
+  <string name="panic_setting_title">Тревожная кнопка</string>
+  <string name="panic_setting_hint">Настройте поведение Briar, когда вы используете тревожную кнопку</string>
+  <string name="panic_app_setting_title">Выбор тревожной кнопки</string>
   <string name="unknown_app">неизвестное приложение</string>
   <string name="panic_app_setting_summary">Приложение не установлено</string>
-  <string name="panic_app_setting_none">Никто</string>
-  <string name="dialog_title_connect_panic_app">Подтвердить приложение Паника</string>
-  <string name="dialog_message_connect_panic_app">Вы уверены, что хотите разрешить %1$s запускать действия разрушительной Кнопкой паники?</string>
+  <string name="panic_app_setting_none">Нет</string>
+  <string name="dialog_title_connect_panic_app">Подтвердить тревожную кнопку</string>
+  <string name="dialog_message_connect_panic_app">Вы уверены, что хотите разрешить %1$s запускать действия тревожной кнопки?</string>
   <string name="lock_setting_title">Выйти</string>
-  <string name="lock_setting_summary">Выйти из Briar, если нажата Кнопка паники</string>
+  <string name="lock_setting_summary">Выйти из Briar, если нажата тревожная кнопка</string>
   <string name="purge_setting_title">Удалить аккаунт</string>
-  <string name="purge_setting_summary">Удалите свою учетную запись Briar, если нажата Кнопка паники. Предупреждение: это необратимо удалит ваши идентификаторы, контакты и сообщения</string>
+  <string name="purge_setting_summary">Удалить вашу учетную запись Briar при нажатии тревожной кнопки. Внимание: это необратимо удалит ваши идентификаторы, контакты и сообщения</string>
   <string name="uninstall_setting_title">Удалить Briar</string>
-  <string name="uninstall_setting_summary">Это требует подтверждения вручную в случае возникновения паники</string>
+  <string name="uninstall_setting_summary">Это потребует вашего подтверждения</string>
   <!--Settings Notifications-->
   <string name="notification_settings_title">Уведомления</string>
   <string name="notify_private_messages_setting_title">Приватные сообщения</string>
@@ -373,7 +372,7 @@
   <string name="feedback_title">Обратная связь</string>
   <string name="describe_crash">Опишите, что произошло (необязательно)</string>
   <string name="enter_feedback">Введите свой отзыв</string>
-  <string name="optional_contact_email">Ваш адрес электронной почты (необязательно)</string>
+  <string name="optional_contact_email">Ваш email адрес (необязательно)</string>
   <string name="include_debug_report_crash">Включить анонимные данные о сбое</string>
   <string name="include_debug_report_feedback">Включить анонимные данные об этом устройстве</string>
   <string name="could_not_load_report_data">Не удалось загрузить данные отчета.</string>
